addes meta tags for description and author

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The CV of Nico König</title>
+    <title>The CV of Natalie Gurbina</title>
     <meta
       name="description"
-      content="This is the CV of Nico König - oh yeah!"
+      content="This is the CV of Natalie Gurbina"
     />
-    <meta name="author" content="Nico König" />
+    <meta name="author" content="Natalie Gurbina" />
   </head>
   <body></body>
 </html>
