--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The CV of Natalie Gurbina</title>
-    <meta
-      name="description"
-      content="This is the CV of Natalie Gurbina"
-    />
+    <meta name="description" content="This is the CV of Natalie Gurbina" />
     <meta name="author" content="Natalie Gurbina" />
   </head>
   <body></body>
