--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <meta name="description" content="This is the CV of Natalie Gurbina" />
     <meta name="author" content="Natalie Gurbina" />
   </head>
-  <body></body>
+  <body>Natalie Gurbina</body>
 </html>
