creates basic structure of CV

--- a/index.html
+++ b/index.html
@@ -7,5 +7,67 @@
     <meta name="description" content="This is the CV of Natalie Gurbina" />
     <meta name="author" content="Natalie Gurbina" />
   </head>
-  <body>Natalie Gurbina</body>
+  <body>
+    <header>
+      <h1>CV of Natalie Gurbina</h1>
+    </header>
+    <div>
+      <img src="" />
+      <h2>My profile</h2>
+      <ul>
+        <li>Front-End Web-Development student @Coding Bootcamps Europe</li>
+        <li>Language & communication expert</li>
+        <li>Lifelong learner</li>
+        <li>Traveler & world citizen</li>
+      </ul>
+      <p></p>
+    </div>
+    <div>
+      <h2>My experiences</h2>
+      <h4>[02.2021 - 07.2021] Manager Web-App @Sky Deutschland GmbH, Munich</h4>
+      <ul>
+        <li>Performance and quality management of a commercial customer chat</li>
+        <li>Controlling external service providers</li>
+      </ul>
+      <h4>[05.2020 - 01.2021] Private time out</h4> 
+        <ul>
+          <li>Travelling</li>
+          <li>Active job search</li>
+        </ul>
+      
+      <h4>[05.2019 - 04.2020] Assistent Customer Service Coordination @AKDB, Munich</h4>
+      <ul>
+        <li>Qualitymanagement in customer service department</li>
+        <li>Main contact person for ongoing project</li>
+      </ul>
+      <p></p>
+    </div>
+    <div>
+      <h2>My skills</h2>
+      <h4>Technical skills</h4>
+      <ul>
+        <li>Programming languages & tools: HTML, CSS, JavaScript & JavaScript Frameworks, Node.js, Open Source</li>
+        <li>Human languages: English, German, Russian</li>
+      </ul>
+      <h4>Soft skills</h4>
+      <ul>
+        <li>Problem solving ability</li>
+        <li>Communication talent</li>
+        <li>Customer and service oriented</li>
+        <li>High team spirit</li>
+        <li>Empatic/Sociable</li>
+        <li>Corageous</li>
+        <li>Reliable</li>
+        <li>Creative</li>
+      </ul>
+      <p></p>
+    </div>
+    <div>
+      <h2>My contacts</h2>
+      <ul>
+        <li>Email me: n.gurbina@gmail.com</li>
+        <li>Give me a call: +4917643400975</li>
+        <li>Follow me on GitHub: https://github.com/frau_juna</li>
+    </div>
+  </body>
 </html>
