changes layout in section "technical skills"

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
       <h1>CV of Natalie Gurbina</h1>
     </header>
     <div>
-      <img src="" />
+      <img src="images/Bew-Foto-small.jpg" />
       <h2>My profile</h2>
+      <article>
+        <h4>[since 12.2021] Front-End Web-Development student @Coding Bootcamps Europe</h4>
+      </article>
       <ul>
-        <li>Front-End Web-Development student @Coding Bootcamps Europe</li>
         <li>Language & communication expert</li>
         <li>Lifelong learner</li>
         <li>Traveler & world citizen</li>
@@ -46,8 +48,8 @@
       <h2>My skills</h2>
       <h4>Technical skills</h4>
       <ul>
-        <li>Programming languages & tools: HTML, CSS, JavaScript & JavaScript Frameworks, Node.js, Open Source</li>
-        <li>Human languages: English, German, Russian</li>
+        <li>[Programming languages & tools]: HTML, CSS, JavaScript & JavaScript Frameworks, Node.js, Open Source</li>
+        <li>[Natural languages]: English, German, Russian</li>
       </ul>
       <h4>Soft skills</h4>
       <ul>
