adds Sub-Headings and Text Content

--- a/index.html
+++ b/index.html
@@ -10,66 +10,91 @@
   <body>
     <header>
       <h1>CV of Natalie Gurbina</h1>
+      <p>Front-End Web-Development student @Coding Bootcamps Europe (since 12.2021)</p>
     </header>
     <div>
       <img src="images/Bew-Foto-small.jpg" />
-      <h2>My profile</h2>
+    <main>
       <article>
-        <h4>[since 12.2021] Front-End Web-Development student @Coding Bootcamps Europe</h4>
+        <h2>Profile</h2>
+        <p>
+          <ul>
+            <li>Language & communication expert with passion for IT</li>
+            <li>Lifelong learner</li>
+            <li>Traveler & world citizen</li>
+          </ul>
+        </p>
       </article>
-      <ul>
-        <li>Language & communication expert</li>
-        <li>Lifelong learner</li>
-        <li>Traveler & world citizen</li>
-      </ul>
-      <p></p>
-    </div>
-    <div>
-      <h2>My experiences</h2>
-      <h4>[02.2021 - 07.2021] Manager Web-App @Sky Deutschland GmbH, Munich</h4>
-      <ul>
-        <li>Performance and quality management of a commercial customer chat</li>
-        <li>Controlling external service providers</li>
-      </ul>
-      <h4>[05.2020 - 01.2021] Private time out</h4> 
+      <article>
+        <h2>Experiences</h2>
+        <section>
+          <header>
+            <h4>Manager Web-App @Sky Deutschland GmbH, Munich</h4>
+            <p>[02.2021 - 07.2021]</p>
+          </header>
+          <p>
+            <ul>
+              <li>Performance and quality management of a commercial customer chat</li>
+              <li>Controlling external service providers</li>
+            </ul>
+          </p>
+        </section>
+        <section>
+          <header>
+            <h4>Private time out/ sabbatical</h4>
+            <p>[05.2020 - 01.2021]</p>
+          </header>
+          <p>
+          <ul>
+            <li>Travelling</li>
+            <li>Active job search</li>
+          </ul>
+          </p>
+        </section>
+        <section>
+          <header>
+            <h4>Assistent Customer Service Coordination @AKDB, Munich</h4>
+            <p>[05.2019 - 04.2020]</p>
+          </header>
+          <p>
+            <ul>
+              <li>Qualitymanagement in customer service department</li>
+              <li>Main contact person for ongoing project</li>
+            </ul>
+          </p>
+        </section>
+      </article>
+
+      <article>
+      <h2>Skills</h2>
+      <section>
+        <h4>Technical skills</h4>
         <ul>
-          <li>Travelling</li>
-          <li>Active job search</li>
+          <li>[Programming languages & tools]: HTML, CSS, JavaScript & JavaScript Frameworks, Node.js, Open Source</li>
+          <li>[Natural languages]: English, German, Russian</li>
         </ul>
-      
-      <h4>[05.2019 - 04.2020] Assistent Customer Service Coordination @AKDB, Munich</h4>
-      <ul>
-        <li>Qualitymanagement in customer service department</li>
-        <li>Main contact person for ongoing project</li>
-      </ul>
-      <p></p>
-    </div>
-    <div>
-      <h2>My skills</h2>
-      <h4>Technical skills</h4>
-      <ul>
-        <li>[Programming languages & tools]: HTML, CSS, JavaScript & JavaScript Frameworks, Node.js, Open Source</li>
-        <li>[Natural languages]: English, German, Russian</li>
-      </ul>
-      <h4>Soft skills</h4>
-      <ul>
-        <li>Problem solving ability</li>
-        <li>Communication talent</li>
-        <li>Customer and service oriented</li>
-        <li>High team spirit</li>
-        <li>Empatic/Sociable</li>
-        <li>Corageous</li>
-        <li>Reliable</li>
-        <li>Creative</li>
-      </ul>
-      <p></p>
-    </div>
-    <div>
-      <h2>My contacts</h2>
+      </section>
+      <section>
+        <h4>Soft skills</h4>
+        <ul>
+          <li>Problem solving ability</li>
+          <li>Communication talent</li>
+          <li>Customer and service oriented</li>
+          <li>High team spirit</li>
+          <li>Empatic/Sociable</li>
+          <li>Corageous</li>
+          <li>Reliable</li>
+          <li>Creative</li>
+        </ul>
+      </section>
+    </article>
+    <article>
+      <h2>Contact</h2>
       <ul>
         <li>Email me: n.gurbina@gmail.com</li>
         <li>Give me a call: +4917643400975</li>
         <li>Follow me on GitHub: https://github.com/frau_juna</li>
-    </div>
-  </body>
+    </article>
+  </main>  
+</body>
 </html>
