adds adress tag

--- a/index.html
+++ b/index.html
@@ -89,11 +89,16 @@
       </section>
     </article>
     <article>
-      <h2>Contact</h2>
-      <ul>
-        <li>Email me: n.gurbina@gmail.com</li>
-        <li>Give me a call: +4917643400975</li>
-        <li>Follow me on GitHub: https://github.com/frau_juna</li>
+      <p>
+        <h2>Contact</h2>
+        <br><br>
+        <adress>
+          <ul>
+            <li>Email me: n.gurbina@gmail.com</li>
+            <li>Give me a call: +4917643400975</li>
+            <li>Follow me on GitHub: https://github.com/frau_juna</li>
+        </adress>
+      </p>
     </article>
   </main>  
 </body>
