--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
       <section>
         <h4>Technical skills</h4>
         <ul>
-          <li>[Programming languages & tools]: HTML, CSS, JavaScript & JavaScript Frameworks, Node.js, Open Source</li>
+          <li>[Programming languages]: HTML, CSS, JavaScript & </li>
+          <li>[DevTools]:  JavaScript Frameworks, Node.js, Open Source</li>
           <li>[Natural languages]: English, German, Russian</li>
         </ul>
       </section>
@@ -79,12 +80,12 @@
         <ul>
           <li>Problem solving ability</li>
           <li>Communication talent</li>
-          <li>Customer and service oriented</li>
+          <li>Customer and service orientation</li>
           <li>High team spirit</li>
-          <li>Empatic/Sociable</li>
-          <li>Corageous</li>
-          <li>Reliable</li>
-          <li>Creative</li>
+          <li>Empaty/Sociability</li>
+          <li>Courage</li>
+          <li>Reliability</li>
+          <li>Creativeness</li>
         </ul>
       </section>
     </article>
