adds href for email and github profile

--- a/index.html
+++ b/index.html
@@ -93,9 +93,14 @@
       <p>
         <h2>Contact</h2>
           <ul>
-            <li>Email me: n.gurbina@gmail.com</li>
             <li>Give me a call: +4917643400975</li>
-            <li>Follow me on GitHub: https://github.com/frau_juna</li>
+            <li>
+              <a href="mailto:n.gurbina@gmail.com">Email me</a>
+            </li>
+            <li>
+              <a href="https://github.com/frau-juna">Follow me on GitHub</a>
+            </li> 
+          </ul>
       </p>
     </article>
   </main>  
