--- a/index.html
+++ b/index.html
@@ -11,22 +11,28 @@
     <header>
       <h1>CV of Natalie Gurbina</h1>
       <p>Front-End Web-Development student @Coding Bootcamps Europe (since 12.2021)</p>
+      <nav>
+        <a href="#profile">Profile</a>
+        <a href="#experience">Experience</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </header>
     <div>
       <img src="images/Bew-Foto-small.jpg" />
     <main>
-      <article>
+      <article id="profile">
         <h2>Profile</h2>
         <p>
           <ul>
-            <li>Language & communication expert with passion for IT</li>
+            <li>Language & communication expert with <em>passion for IT</em></li>
             <li>Lifelong learner</li>
             <li>Traveler & world citizen</li>
           </ul>
         </p>
       </article>
-      <article>
-        <h2>Experiences</h2>
+      <article id="experience">
+        <h2>Experience</h2>
         <section>
           <header>
             <h4>Manager Web-App @Sky Deutschland GmbH, Munich</h4>
@@ -65,7 +71,7 @@
         </section>
       </article>
 
-      <article>
+      <article id="Skills">
       <h2>Skills</h2>
       <section>
         <h4>Technical skills</h4>
@@ -89,7 +95,7 @@
         </ul>
       </section>
     </article>
-    <article>
+    <article id="contact">
       <p>
         <h2>Contact</h2>
           <ul>
