moves nav down under the image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <header>
       <h1>CV of Natalie Gurbina</h1>
       <p>Front-End Web-Development student @Coding Bootcamps Europe (since 12.2021)</p>
+      <div>
+        <img src="images/Bew-Foto-small.jpg" />
+      </div>
       <nav>
         <a href="#profile">Profile</a>
         <a href="#experience">Experience</a>
@@ -18,8 +21,8 @@
         <a href="#contact">Contact</a>
       </nav>
     </header>
-    <div>
-      <img src="images/Bew-Foto-small.jpg" />
+    
+      
     <main>
       <article id="profile">
         <h2>Profile</h2>
