--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>The CV of Natalie Gurbina</title>
     <meta name="description" content="This is the CV of Natalie Gurbina" />
     <meta name="author" content="Natalie Gurbina" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
