corrects uppercase in the article id item

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </section>
       </article>
 
-      <article id="Skills">
+      <article id="skills">
       <h2>Skills</h2>
       <section>
         <h4>Technical skills</h4>
