adds class properties

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <h1>CV of Natalie Gurbina</h1>
       <p>Front-End Web-Development student @Coding Bootcamps Europe (since 12.2021)</p>
       <div>
         <img src="images/Bew-Foto-small.jpg" />
       </div>
       <nav>
-        <a href="#profile">Profile</a>
-        <a href="#experience">Experience</a>
-        <a href="#skills">Skills</a>
-        <a href="#contact">Contact</a>
+        <a class="nav-link" href="#profile">Profile</a>
+        <a class="nav-link" href="#experience">Experience</a>
+        <a class="nav-link" href="#skills">Skills</a>
+        <a class="nav-link" href="#contact">Contact</a>
       </nav>
     </header>
 
-    <main>
+    <main class="main">
       <article id="profile">
         <h2>Profile</h2>
         <p>
@@ -105,11 +105,11 @@
         </ul>
       </section>
     </article>
-    
+
     <article id="contact">
       <p>
         <h2>Contact</h2>
-          <ul>
+          <ol>
             <li>Give me a call: +4917643400975</li>
             <li>
               <a href="mailto:n.gurbina@gmail.com">Email me</a>
@@ -117,7 +117,7 @@
             <li>
               <a href="https://github.com/frau-juna">Follow me on GitHub</a>
             </li> 
-          </ul>
+          </ol>
       </p>
     </article>
   </main>  
