loads normalize.css using unpkg

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>The CV of Natalie Gurbina</title>
     <meta name="description" content="This is the CV of Natalie Gurbina" />
     <meta name="author" content="Natalie Gurbina" />
+    <link
+    rel="stylesheet"
+    href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
+    />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
