--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
     <header class="header">
-      <h1>CV of Natalie Gurbina</h1>
-      <p>Front-End Web-Development student @Coding Bootcamps Europe (since 12.2021)</p>
+      <h1>Natalie Gurbina</h1>
+      <p class="profession">Front-End Web-Development student @Coding Bootcamps Europe (since 12.2021)</p>
       <div>
         <img src="images/Bew-Foto-small.jpg" />
       </div>
@@ -32,7 +31,6 @@
         <a class="nav-link" href="#contact">Contact</a>
       </nav>
     </header>
-
     <main class="main">
       <article id="profile">
         <h2>Profile</h2>
@@ -44,7 +42,6 @@
           </ul>
         </p>
       </article>
-
       <article id="experience">
         <h2>Experience</h2>
         <section>
@@ -84,7 +81,6 @@
           </p>
         </section>
       </article>
-
       <article id="skills">
       <h2>Skills</h2>
       <section>
@@ -109,7 +105,6 @@
         </ul>
       </section>
     </article>
-
     <article id="contact">
       <p>
         <h2>Contact</h2>
