corrects the text content

--- a/index.html
+++ b/index.html
@@ -46,37 +46,40 @@
         <h2>Experience</h2>
         <section>
           <header>
-            <h4>Manager Web-App @Sky Deutschland GmbH, Munich</h4>
-            <p>[02.2021 - 07.2021]</p>
+            <h4>Web Application Developer @Coding Bootcamps EU (remote)</h4>
+            <p>[12.2021 - present]</p>
           </header>
           <p>
             <ul>
-              <li>Performance and quality management of a commercial customer chat</li>
-              <li>Controlling external service providers</li>
+              <li>HTML, CSS, JavaScript</li>
+              <li>JavaScript Frameworks, Node.js, Open Source, etc.</li>
+              <li>Basics of agile project management</li>
             </ul>
           </p>
         </section>
         <section>
           <header>
-            <h4>Private time out/ sabbatical</h4>
-            <p>[05.2020 - 01.2021]</p>
+            <h4 class="experience-heading">Proffesional reorientation</h4>
+            <p class="experience-subheading">[08.2020 - 11.2021]</p>
           </header>
           <p>
           <ul>
-            <li>Travelling</li>
             <li>Active job search</li>
+            <li>Professional coaching <a href="https://www.petschwork.de/">@Petschwork</a>
+            </li>
           </ul>
           </p>
         </section>
         <section>
           <header>
-            <h4>Assistent Customer Service Coordination @AKDB, Munich</h4>
-            <p>[05.2019 - 04.2020]</p>
+            <h4 class="experience-heading">
+              Manager Web-App @Sky Deutschland GmbH, Munich</h4>
+            <p class="experience-subheading">[02.2021 - 07.2021]</p>
           </header>
           <p>
             <ul>
-              <li>Qualitymanagement in customer service department</li>
-              <li>Main contact person for ongoing project</li>
+              <li>Performance and quality management of a commercial customer chat</li>
+              <li>Controlling of external service providers</li>
             </ul>
           </p>
         </section>
@@ -86,7 +89,7 @@
       <section>
         <h4>Technical skills</h4>
         <ul>
-          <li>[Programming languages]: HTML, CSS, JavaScript & </li>
+          <li>[Programming languages]: HTML, CSS, JavaScript</li>
           <li>[DevTools]:  JavaScript Frameworks, Node.js, Open Source</li>
           <li>[Natural languages]: English, German, Russian</li>
         </ul>
@@ -96,12 +99,9 @@
         <ul>
           <li>Problem solving ability</li>
           <li>Communication talent</li>
-          <li>Customer and service orientation</li>
-          <li>High team spirit</li>
-          <li>Empaty/Sociability</li>
-          <li>Courage</li>
+          <li>Empathy/Sociability</li>
           <li>Reliability</li>
-          <li>Creativeness</li>
+          <li>Creative thinking</li>
         </ul>
       </section>
     </article>
