adds "hire me" badge and changes the title and profession in a generic html element

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
   </head>
   <body>
     <header class="header">
-      <h1>Natalie Gurbina</h1>
+      <div class="heading-group">
+        <h1 class="main-heading">Natalie Gurbina</h1>
       <p class="profession">Front-End Web-Development student @Coding Bootcamps Europe (since 12.2021)</p>
+      </div>
       <div>
         <img src="images/Bew-Foto-small.jpg" />
       </div>
@@ -30,6 +32,7 @@
         <a class="nav-link" href="#skills">Skills</a>
         <a class="nav-link" href="#contact">Contact</a>
       </nav>
+      <aside class="hire-me">Hire Me</aside>
     </header>
     <main class="main">
       <article id="profile">
