adds class properties to headers and subheaders

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
     <main class="main">
       <article id="profile">
-        <h2>Profile</h2>
+        <h2 class="article-heading">Profile</h2>
         <p>
           <ul>
             <li>Language & communication expert with <em>passion for IT</em></li>
@@ -46,11 +46,13 @@
         </p>
       </article>
       <article id="experience">
-        <h2>Experience</h2>
+        <h2 class="article-heading">Experience</h2>
         <section>
           <header>
-            <h4>Web Application Developer @Coding Bootcamps EU (remote)</h4>
-            <p>[12.2021 - present]</p>
+            <h4 class="experience-heading">
+              Web Application Developer @Coding Bootcamps EU (remote)
+            </h4>
+            <p class="experience-subheading">[12.2021 - present]</p>
           </header>
           <p>
             <ul>
@@ -62,7 +64,9 @@
         </section>
         <section>
           <header>
-            <h4 class="experience-heading">Proffesional reorientation</h4>
+            <h4 class="experience-heading">
+              Proffesional reorientation
+            </h4>
             <p class="experience-subheading">[08.2020 - 11.2021]</p>
           </header>
           <p>
@@ -76,7 +80,8 @@
         <section>
           <header>
             <h4 class="experience-heading">
-              Manager Web-App @Sky Deutschland GmbH, Munich</h4>
+              Manager Web-App @Sky Deutschland GmbH, Munich
+            </h4>
             <p class="experience-subheading">[02.2021 - 07.2021]</p>
           </header>
           <p>
@@ -88,7 +93,7 @@
         </section>
       </article>
       <article id="skills">
-      <h2>Skills</h2>
+      <h2 class="article-heading">Skills</h2>
       <section>
         <h4>Technical skills</h4>
         <ul>
@@ -109,8 +114,7 @@
       </section>
     </article>
     <article id="contact">
-      <p>
-        <h2>Contact</h2>
+        <h2 class="article-heading">Contact</h2>
           <ol>
             <li>Give me a call: +4917643400975</li>
             <li>
