--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div>
         <img src="images/Bew-Foto-small.jpg" />
       </div>
-      <nav>
+      <nav class="navigation">
         <a class="nav-link" href="#profile">Profile</a>
         <a class="nav-link" href="#experience">Experience</a>
         <a class="nav-link" href="#skills">Skills</a>
