--- a/index.html
+++ b/index.html
@@ -116,16 +116,24 @@
     <article id="contact">
         <h2 class="article-heading">Contact</h2>
           <ol>
-            <li>Give me a call: +4917643400975</li>
+            <li>Mobile: +4917643400975</li>
             <li>
-              <a href="mailto:n.gurbina@gmail.com">Email me</a>
+              E-mail:
+              <a href="mailto:n.gurbina@gmail.com">n.gurbina@gmail.com</a>
             </li>
             <li>
-              <a href="https://github.com/frau-juna">Follow me on GitHub</a>
+              Follow me on
+              <a href="https://github.com/frau-juna"> GitHub</a>
             </li> 
           </ol>
       </p>
     </article>
-  </main>  
+  </main>
+  <footer class="footer">
+    <p class="footer-text">
+      Looking forward to hire me?
+      <a class="footer-link" href="mailto:n.gurbina@gmail.com">Contact me</a>
+    </p>
+  </footer>  
 </body>
 </html>
