adds class property to headers

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="heading-group">
         <h1 class="main-heading">Natalie Gurbina</h1>
-      <p class="profession">Front-End Web-Development student @Coding Bootcamps Europe (since 12.2021)</p>
+        <p class="profession">Front-End Web-Development student @Coding Bootcamps Europe (since 12.2021)</p>
       </div>
       <div>
         <img src="images/Bew-Foto-small.jpg" />
@@ -48,10 +48,10 @@
       <article id="experience">
         <h2 class="article-heading">Experience</h2>
         <section>
-          <header>
-            <h4 class="experience-heading">
+          <header class="experience-header">
+            <h3 class="experience-heading">
               Web Application Developer @Coding Bootcamps EU (remote)
-            </h4>
+            </h3>
             <p class="experience-subheading">[12.2021 - present]</p>
           </header>
           <p>
@@ -63,10 +63,10 @@
           </p>
         </section>
         <section>
-          <header>
-            <h4 class="experience-heading">
+          <header class="experience-header">
+            <h3 class="experience-heading">
               Proffesional reorientation
-            </h4>
+            </h3>
             <p class="experience-subheading">[08.2020 - 11.2021]</p>
           </header>
           <p>
@@ -78,10 +78,10 @@
           </p>
         </section>
         <section>
-          <header>
-            <h4 class="experience-heading">
+          <header class="experience-heading">
+            <h3 class="experience-heading">
               Manager Web-App @Sky Deutschland GmbH, Munich
-            </h4>
+            </h3>
             <p class="experience-subheading">[02.2021 - 07.2021]</p>
           </header>
           <p>
@@ -95,7 +95,7 @@
       <article id="skills">
       <h2 class="article-heading">Skills</h2>
       <section>
-        <h4>Technical skills</h4>
+        <h3>Technical skills</h3>
         <ul>
           <li>[Programming languages]: HTML, CSS, JavaScript</li>
           <li>[DevTools]:  JavaScript Frameworks, Node.js, Open Source</li>
