makes last corrections

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="heading-group">
         <h1 class="main-heading">Natalie Gurbina</h1>
-        <p class="profession">Front-End Web-Development student @Coding Bootcamps Europe (since 12.2021)</p>
+        <p class="profession">Front-End Web-Development student</p>
       </div>
       <div>
         <img src="images/Bew-Foto-small.jpg" />
@@ -48,10 +48,8 @@
       <article id="experience">
         <h2 class="article-heading">Experience</h2>
         <section>
-          <header class="experience-header">
-            <h3 class="experience-heading">
-              Web Application Developer @Coding Bootcamps EU (remote)
-            </h3>
+          <header class="experience-heading">
+            <h3 class="experience-heading">Web Application Developer @Coding Bootcamps EU (remote)</h3>
             <p class="experience-subheading">[12.2021 - present]</p>
           </header>
           <p>
@@ -63,10 +61,8 @@
           </p>
         </section>
         <section>
-          <header class="experience-header">
-            <h3 class="experience-heading">
-              Proffesional reorientation
-            </h3>
+          <header class="experience-heading">
+            <h3 class="experience-heading">Proffesional reorientation</h3>
             <p class="experience-subheading">[08.2020 - 11.2021]</p>
           </header>
           <p>
@@ -79,9 +75,7 @@
         </section>
         <section>
           <header class="experience-heading">
-            <h3 class="experience-heading">
-              Manager Web-App @Sky Deutschland GmbH, Munich
-            </h3>
+            <h3 class="experience-heading">Manager Web-App @Sky Deutschland GmbH, Munich</h3>
             <p class="experience-subheading">[02.2021 - 07.2021]</p>
           </header>
           <p>
@@ -103,7 +97,7 @@
         </ul>
       </section>
       <section>
-        <h4>Soft skills</h4>
+        <h3>Soft skills</h3>
         <ul>
           <li>Problem solving ability</li>
           <li>Communication talent</li>
