adds link for a direct call

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
     <article id="contact">
         <h2 class="article-heading">Contact</h2>
           <ol>
-            <li>Mobile: +4917643400975</li>
+            <li>Mobile: 
+              <a href="tel:+4917643400975">+4917643400975</a>
+            </li>
             <li>
               E-mail:
               <a href="mailto:n.gurbina@gmail.com">n.gurbina@gmail.com</a>
