moves image from header to main section

--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
     <header class="header">
       <div class="heading-group">
         <h1 class="main-heading">Natalie Gurbina</h1>
         <p class="profession">Front-End Web-Development student</p>
-      </div>
-      <div>
-        <img src="images/Bew-Foto-small.jpg" />
       </div>
       <nav class="navigation">
         <a class="nav-link" href="#profile">Profile</a>
@@ -34,7 +32,12 @@
       </nav>
       <aside class="hire-me">Hire Me</aside>
     </header>
+
     <main class="main">
+      <div>
+        <img src="images/Bew-Foto-small.jpg" />
+      </div>
+
       <article id="profile">
         <h2 class="article-heading">Profile</h2>
         <p>
@@ -45,6 +48,7 @@
           </ul>
         </p>
       </article>
+
       <article id="experience">
         <h2 class="article-heading">Experience</h2>
         <section>
@@ -86,50 +90,45 @@
           </p>
         </section>
       </article>
+      
       <article id="skills">
-      <h2 class="article-heading">Skills</h2>
-      <section>
-        <h3>Technical skills</h3>
-        <ul>
-          <li>[Programming languages]: HTML, CSS, JavaScript</li>
-          <li>[DevTools]:  JavaScript Frameworks, Node.js, Open Source</li>
-          <li>[Natural languages]: English, German, Russian</li>
-        </ul>
-      </section>
-      <section>
-        <h3>Soft skills</h3>
-        <ul>
-          <li>Problem solving ability</li>
-          <li>Communication talent</li>
-          <li>Empathy/Sociability</li>
-          <li>Reliability</li>
-          <li>Creative thinking</li>
-        </ul>
-      </section>
-    </article>
-    <article id="contact">
+        <h2 class="article-heading">Skills</h2>
+        <section>
+         <h3>Technical skills</h3>
+         <ul>
+           <li>[Programming languages]: HTML, CSS, JavaScript</li>
+           <li>[DevTools]:  JavaScript Frameworks, Node.js, Open Source</li>
+           <li>[Natural languages]: English, German, Russian</li>
+         </ul>
+       </section>
+       <section>
+         <h3>Soft skills</h3>
+         <ul>
+           <li>Problem solving ability</li>
+           <li>Communication talent</li>
+           <li>Empathy/Sociability</li>
+           <li>Reliability</li>
+           <li>Creative thinking</li>
+         </ul>
+       </section>
+     </article>
+
+     <article id="contact">
         <h2 class="article-heading">Contact</h2>
-          <ol>
-            <li>Mobile: 
-              <a href="tel:+4917643400975">+4917643400975</a>
-            </li>
-            <li>
-              E-mail:
-              <a href="mailto:n.gurbina@gmail.com">n.gurbina@gmail.com</a>
-            </li>
-            <li>
-              Follow me on
-              <a href="https://github.com/frau-juna"> GitHub</a>
-            </li> 
-          </ol>
-      </p>
-    </article>
-  </main>
-  <footer class="footer">
-    <p class="footer-text">
-      Looking forward to hire me?
-      <a class="footer-link" href="mailto:n.gurbina@gmail.com">Contact me</a>
-    </p>
-  </footer>  
-</body>
+        <p>
+          <ul>
+            <li>Mobile: <a href="tel:+4917643400975">+4917643400975</a></li>
+            <li>E-mail: <a href="mailto:n.gurbina@gmail.com">n.gurbina@gmail.com</a></li>
+            <li>Follow me on <a href="https://github.com/frau-juna"> GitHub</a></li> 
+          </ul>
+        </p>
+      </article>
+    </main>
+
+    <footer class="footer">
+     <p class="footer-text">Looking forward to hire me?
+       <a class="footer-link" href="mailto:n.gurbina@gmail.com">Contact me</a>
+     </p>
+   </footer>
+  </body>
 </html>
