--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
     </main>
 
     <footer class="footer">
-     <p class="footer-text">Looking forward to hire me?
-       <a class="footer-link" href="mailto:n.gurbina@gmail.com">Contact me</a>
+     <p class="footer-text">Interested?
+       <a class="footer-link" href="mailto:n.gurbina@gmail.com">Let me know</a>
      </p>
    </footer>
   </body>
