adds a conainer for the image

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>The CV of Natalie Gurbina</title>
     <meta name="description" content="This is the CV of Natalie Gurbina" />
     <meta name="author" content="Natalie Gurbina" />
-    <link
-    rel="stylesheet"
-    href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
+    <link rel="stylesheet" href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
     />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -34,10 +32,10 @@
     </header>
 
     <main class="main">
-      <div>
-        <img src="images/Bew-Foto-small.jpg" />
+      <div class="container">
+        <img src="images/Bew-Foto-small.jpg">
       </div>
-
+    
       <article id="profile">
         <h2 class="article-heading">Profile</h2>
         <p>
@@ -127,7 +125,7 @@
 
     <footer class="footer">
      <p class="footer-text">Interested?
-       <a class="footer-link" href="mailto:n.gurbina@gmail.com">Let me know</a>
+       <a class="footer-link" href="mailto:n.gurbina@gmail.com">Feel free to contact me</a>
      </p>
    </footer>
   </body>
