--- a/index.html
+++ b/index.html
@@ -48,24 +48,11 @@
       </article>
 
       <article id="experience">
-        <h2 class="article-heading">Experience</h2>
-        <section>
-          <header class="experience-heading">
-            <h3 class="experience-heading">Web Application Developer @Coding Bootcamps EU (remote)</h3>
-            <p class="experience-subheading">[12.2021 - present]</p>
-          </header>
-          <p>
-            <ul>
-              <li>HTML, CSS, JavaScript</li>
-              <li>JavaScript Frameworks, Node.js, Open Source, etc.</li>
-              <li>Basics of agile project management</li>
-            </ul>
-          </p>
-        </section>
+        <h2 class="article-heading">Experience</h2> 
         <section>
           <header class="experience-heading">
             <h3 class="experience-heading">Proffesional reorientation</h3>
-            <p class="experience-subheading">[08.2020 - 11.2021]</p>
+            <p class="experience-subheading">[09.2020 - 10.2021]</p>
           </header>
           <p>
           <ul>
@@ -94,8 +81,7 @@
         <section>
          <h3>Technical skills</h3>
          <ul>
-           <li>[Programming languages]: HTML, CSS, JavaScript</li>
-           <li>[DevTools]:  JavaScript Frameworks, Node.js, Open Source</li>
+           <li>[Programming languages]: Basics of HTML, CSS, JavaScript</li>
            <li>[Natural languages]: English, German, Russian</li>
          </ul>
        </section>
