--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="heading-group">
         <h1 class="main-heading">Natalie Gurbina</h1>
-        <p class="profession">Front-End Web-Development student</p>
+        <p class="profession">Linguist in professional reorientation to a Web-Developer</p>
       </div>
       <nav class="navigation">
         <a class="nav-link" href="#profile">Profile</a>
