--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="heading-group">
         <h1 class="main-heading">Natalie Gurbina</h1>
-        <p class="profession">Front-End Web-Development student</p>
+        <p class="profession">Linguist in professional reorientation to a Web-Developer</p>
       </div>
       <nav class="navigation">
         <a class="nav-link" href="#profile">Profile</a>
@@ -49,19 +49,6 @@
 
       <article id="experience">
         <h2 class="article-heading">Experience</h2>
-        <section>
-          <header class="experience-heading">
-            <h3 class="experience-heading">Web Application Developer @Coding Bootcamps EU (remote)</h3>
-            <p class="experience-subheading">[12.2021 - present]</p>
-          </header>
-          <p>
-            <ul>
-              <li>HTML, CSS, JavaScript</li>
-              <li>JavaScript Frameworks, Node.js, Open Source, etc.</li>
-              <li>Basics of agile project management</li>
-            </ul>
-          </p>
-        </section>
         <section>
           <header class="experience-heading">
             <h3 class="experience-heading">Proffesional reorientation</h3>
@@ -94,8 +81,7 @@
         <section>
          <h3>Technical skills</h3>
          <ul>
-           <li>[Programming languages]: HTML, CSS, JavaScript</li>
-           <li>[DevTools]:  JavaScript Frameworks, Node.js, Open Source</li>
+           <li>[Programming languages]: Basics of HTML, CSS, JavaScript</li>
            <li>[Natural languages]: English, German, Russian</li>
          </ul>
        </section>
