Revert "Code update suggestions"

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
         <a class="nav-link" href="#skills">Skills</a>
         <a class="nav-link" href="#contact">Contact</a>
       </nav>
-      <aside class="hire-me">
-        <!-- I suggest to add a function to this Element -->
-        <a href="mailto:n.gurbina@gmail.com">Hire Me</a>
-      </aside>
+      <aside class="hire-me">Hire Me</aside>
     </header>
 
     <main class="main">
@@ -40,7 +37,7 @@
       </div>
     
       <article id="profile">
-        <h2>Profile</h2>
+        <h2 class="article-heading">Profile</h2>
         <p>
           <ul>
             <li>Language & communication expert with <em>passion for IT</em></li>
@@ -51,15 +48,10 @@
       </article>
 
       <article id="experience">
-        <h2>Experience</h2>
+        <h2 class="article-heading">Experience</h2>
         <section>
-          <!-- 
-            Class .experience-heading has no css rules.
-            Class used for 2 different semantic tags <header>,<h3>.
-            It may be a typo for .expririence-header 
-          -->
-          <header class="experience-header">
-            <h3>Proffesional reorientation</h3>
+          <header class="experience-heading">
+            <h3 class="experience-heading">Proffesional reorientation</h3>
             <p class="experience-subheading">[09.2020 - 10.2021]</p>
           </header>
           <p>
@@ -71,8 +63,8 @@
           </p>
         </section>
         <section>
-          <header class="experience-header">
-            <h3>Manager Web-App @Sky Deutschland GmbH, Munich</h3>
+          <header class="experience-heading">
+            <h3 class="experience-heading">Manager Web-App @Sky Deutschland GmbH, Munich</h3>
             <p class="experience-subheading">[02.2021 - 07.2021]</p>
           </header>
           <p>
@@ -85,7 +77,7 @@
       </article>
       
       <article id="skills">
-        <h2>Skills</h2>
+        <h2 class="article-heading">Skills</h2>
         <section>
          <h3>Technical skills</h3>
          <ul>
@@ -106,7 +98,7 @@
      </article>
 
      <article id="contact">
-        <h2>Contact</h2>
+        <h2 class="article-heading">Contact</h2>
         <p>
           <ul>
             <li>Mobile: <a href="tel:+4917643400975">+4917643400975</a></li>
@@ -117,9 +109,8 @@
       </article>
     </main>
 
-    <footer>
-     <p class="footer-text">
-       Interested?
+    <footer class="footer">
+     <p class="footer-text">Interested?
        <a class="footer-link" href="mailto:n.gurbina@gmail.com">Feel free to contact me</a>
      </p>
    </footer>
